[tool.poetry]
name = "docker-builder"
version = "0.1.0"
description = ""
authors = ["javier162380 <javierllorente16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.1"
uvicorn = "^0.11.3"
redis = "^3.4.1"
rq = "^1.3.0"
docker = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
autopep8 = "^1.5.1"
pytest-mock = "^3.1.0"
coverage = "^5.1"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
